# AI-ISP-Pipeline

./: CMakeLists.txt  README.md  model.onnx  pipeline.py  pipeline_lite.py  pipeline_v2.py  real_model.onnx
ncnn_src/: isp_ncnn.cpp
scripts/: inference.py  model.py
